# HaskellFPLabs

lab2/: huffman.cabal
lab2/src/: Huffman.hs
lab2/tests/: example.txt
tasks/: task1.hs  task2.hs  task4.hs  task5.hs  task6.hs  task7.hs  task8.hs
