name:                huffman
version:             0.1.0.0
synopsis:            -
description:         -
homepage:            -
license:             -
license-file:        -
author:              Leonid Protasov
maintainer:          -
copyright:           2023, Leonid Protasov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Huffman
    build-depends:      base >= 4.7 && < 5,
                        bytestring,
                        containers
    default-language:   Haskell2010

executable tests
    hs-source-dirs:     src
    main-is:            Tests.hs
    build-depends:      base >= 4.7 && < 5,
                        huffman,
                        bytestring,
                        containers
    default-language:   Haskell2010
